[NoRef-0] Added db delay so the db is not destroyed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:spring-training-db;INIT=CREATE SCHEMA IF NOT EXISTS spring_training
+spring.datasource.url=jdbc:h2:mem:spring-training-db;INIT=CREATE SCHEMA IF NOT EXISTS spring_training;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=trainee
 spring.datasource.password=oneNicePassword
