[NoRef-0] Extended with Hobbies to showcase hibernate and jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.password=oneNicePassword
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.servlet.context-path=/rest
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 
