--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,14 @@
 			<version>5.1.5.RELEASE</version>
 		</dependency>
 
-<!--		<dependency>-->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+
+		<!--		<dependency>-->
 <!--			<groupId>io.jsonwebtoken</groupId>-->
 <!--			<artifactId>jjwt</artifactId>-->
 <!--			<version>0.9.1</version>-->
